[package]
name = "howto"
authors = ["434b <admin@0x434b.dev>"]
description = "A command line tool to prompt openAI with a howto question of your choice."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
