[package]
name = "howto"
authors = ["434b <admin@0x434b.dev>"]
description = "A command line tool to prompt openAI with a howto question of your choice."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aionic = "0.1.1"
clap = "4.3.19"
tokio = "1.29.1"
